# test-task-backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py
core/models/: __init__.py  base.py  models.py
